# bird-identifier

./: .gitignore  CLAUDE.md  Dockerfile  docker-compose.yaml  pyproject.toml
api/: email_utils.py  inference.py  main.py  model.py  species_utils.py  test_rtsp.py
api/species/: species.json
detector/: bird_detector.py
